# skeletons-monorepo-for-research

./: .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: .gitkeep
notebooks/: example_usage.ipynb
projects/slt-quasi-singular/: README.md  analyzee_dataset.ipynb  create_dataset.ipynb  fit_dataset.ipynb  fit_mixture.ipynb  normal_samples.ipynb  pyproject.toml
projects/slt-quasi-singular/data/run_20260207_170322/: mixture_samples_n200.csv  mixture_samples_n200.npy  mixture_samples_n50.csv  mixture_samples_n5000.csv  mixture_samples_n5000.npy
projects/slt-quasi-singular/data/run_20260207_185326/: mixture_samples_n50.npy
projects/slt-quasi-singular/data/run_20260207_191705/: dgp.json
scripts/: .gitkeep  cleanup.sh  lab.sh  setup.sh
