[tool.poe.tasks]
# run with eg `uv run poe fmt`
fmt = "ruff format ${PWD}"
lint = "ruff check --fix ${PWD}"
check = "basedpyright ${PWD}"
test = "pytest ${PWD}"
# run all the above
all = [ {ref="fmt"}, {ref="lint"}, {ref="check"}, {ref="test"} ]

echo = "echo ${PWD}"

"ci:fmt" = "ruff format --check ${PWD}"  # fail if not formatted
"ci:lint" = "ruff check ${PWD}"

[project]
name="skeletons-monorepo-for-research"
version = "0.1.0"
description = "Research monorepo for deep learning and SLT projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib2>=2.3",
    "typer>=0.16",
    "tqdm>=4.67.1",
    "seaborn>=0.13.2",
    "graphviz>=0.21",
    "nutpie>=0.16.4",
    "papermill>=2.6.0",
    "numba>=0.63.1",
    "jupyter-ai>=2.31.7",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "projects/*"
]

[dependency-groups]
dev = [
    "arviz>=0.22.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyter-ai>=0.12.0",
    "nbclient>=0.10.2",
    "papermill>=2.6.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "NPY",    # numpy specific rules
    "PD",     # pandas-vet
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # strict parameter for zip (python <3.10)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports ok in __init__
"notebooks/**" = ["E402", "F401", "F403"]  # notebooks have different import patterns

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["packages", "projects"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["**/*.py"]
pythonVersion = "3.12"
