[project]
name = "slt-quasi-singular"
version = "0.0.0"
description = "Small project for experimenting with quasi-singular SLT mixtures and examples"
readme = "README.md"
authors = [ { name = "Unknown" } ]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
